[project]
name = "llm-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "vllm>=0.19.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
    "pyright[nodejs]>=1.1.408",
]

[tool.pyright]
venvPath = "."
venv = ".venv"